--- a/Resources/Prototypes/Entities/Mobs/base.yml
+++ b/Resources/Prototypes/Entities/Mobs/base.yml
@@ -194,6 +194,7 @@
 - type: entity
   save: false
   id: MobFlammable
+  parent: NF_BaseSelfOxidizingFireFlammable
   abstract: true
   components:
   - type: Flammable
