--- a/Resources/Prototypes/Entities/Objects/Fun/Instruments/base_instruments.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/Instruments/base_instruments.yml
@@ -24,7 +24,7 @@
 - type: entity
   name: baseinstrument
   id: BasePlaceableInstrument
-  parent: BaseStructureDynamic
+  parent: [BaseStructureDynamic, NF_BaseSelfOxidizingFireFlammable]
   abstract: true
   components:
   - type: Instrument
