--- a/Resources/Prototypes/Entities/Structures/Storage/base_cabinet.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/base_cabinet.yml
@@ -1,6 +1,7 @@
 - type: entity
   abstract: true
   id: BaseItemCabinet
+  parent: NF_BaseSelfOxidizingFireFlammable
   components:
   - type: Openable
     openOnActivate: true
