--- a/Resources/Prototypes/Entities/Structures/Walls/walls.yml
+++ b/Resources/Prototypes/Entities/Structures/Walls/walls.yml
@@ -52,7 +52,13 @@
   - type: BlockWeather
 
 - type: entity
-  parent: BaseWall
+  abstract: true
+  parent: [BaseWall, NF_BaseSelfOxidizingFireFlammable]
+  id: NF_BaseWall
+  name: NF_basewall
+
+- type: entity
+  parent: NF_BaseWall
   id: WallBrick
   name: brick wall
   components:
@@ -86,7 +92,7 @@
     base: brick
 
 - type: entity
-  parent: BaseWall
+  parent: NF_BaseWall
   id: WallClock
   name: clock wall
   components:
@@ -124,7 +130,7 @@
     price: 75 # Frontier 75
 
 - type: entity
-  parent: BaseWall
+  parent: NF_BaseWall
   id: WallClown
   name: bananium wall
   components:
@@ -160,7 +166,7 @@
     base: clown
 
 - type: entity
-  parent: BaseWall
+  parent: NF_BaseWall
   id: WallMeat
   name: meat wall
   description: Sticky.
@@ -194,7 +200,7 @@
     base: meat
 
 - type: entity
-  parent: BaseWall
+  parent: NF_BaseWall
   id: WallCult
   name: cult wall
   components:
@@ -223,7 +229,7 @@
     base: cult
 
 - type: entity
-  parent: BaseWall
+  parent: NF_BaseWall
   id: WallDebug
   name: debug wall
   suffix: DEBUG
@@ -254,7 +260,7 @@
     base: debug
 
 - type: entity
-  parent: BaseWall
+  parent: NF_BaseWall
   id: WallDiamond
   name: diamond wall
   components:
@@ -287,7 +293,7 @@
     base: diamond
 
 - type: entity
-  parent: BaseWall
+  parent: NF_BaseWall
   id: WallGold
   name: gold wall
   components:
@@ -332,7 +338,7 @@
     base: gold
 
 - type: entity
-  parent: BaseWall
+  parent: NF_BaseWall
   id: WallIce
   name: ice wall
   components:
@@ -361,7 +367,7 @@
     base: ice
 
 - type: entity
-  parent: BaseWall
+  parent: NF_BaseWall
   id: WallPlasma
   name: plasma wall
   components:
@@ -408,7 +414,7 @@
     resistance: 5
 
 - type: entity
-  parent: BaseWall
+  parent: NF_BaseWall
   id: WallPlastic
   name: plastic wall
   components:
@@ -470,7 +476,7 @@
       base: plastitanium
 
 - type: entity
-  parent: WallPlastitaniumIndestructible
+  parent: [WallPlastitaniumIndestructible, NF_BaseSelfOxidizingFireFlammable]
   id: WallPlastitanium
   name: plastitanium wall
   suffix: ""
@@ -587,7 +593,7 @@
         - WallLayer
 
 - type: entity
-  parent: BaseWall
+  parent: NF_BaseWall
   id: WallReinforced
   name: reinforced wall
   components:
@@ -731,9 +737,10 @@
     cost: 6 #Frontier
     delay: 8 #Frontier
     fx: EffectRCDDeconstruct8 #Frontier
+  - type: SelfOxidizingFireVisuals #Frontier for SOF
 
 - type: entity
-  parent: BaseWall
+  parent: NF_BaseWall
   id: WallSandstone
   name: sandstone wall
   components:
@@ -766,7 +773,7 @@
     base: sandstone
 
 - type: entity
-  parent: BaseWall
+  parent: NF_BaseWall
   id: WallSilver
   name: silver wall
   components:
@@ -895,7 +902,7 @@
     fx: EffectRCDDeconstruct8 #Frontier
 
 - type: entity
-  parent: BaseWall
+  parent: NF_BaseWall
   id: WallShuttle
   name: shuttle wall
   suffix: Reinforced, Exterior
@@ -960,7 +967,7 @@
 #    reflectProb: 1 # Frontier
 
 - type: entity
-  parent: BaseWall
+  parent: NF_BaseWall
   id: WallShuttleInterior
   name: shuttle wall
   suffix: Interior
@@ -1005,7 +1012,7 @@
 #    reflectProb: 1 # Frontier
 
 - type: entity
-  parent: BaseWall
+  parent: NF_BaseWall
   id: WallSolid
   name: solid wall
   components:
@@ -1091,7 +1098,7 @@
     base: solid
 
 - type: entity
-  parent: BaseWall
+  parent: NF_BaseWall
   id: WallUranium
   name: uranium wall
   components:
@@ -1135,7 +1142,7 @@
     fx: EffectRCDDeconstruct8 #Frontier
 
 - type: entity
-  parent: BaseWall
+  parent: NF_BaseWall
   id: WallWood
   name: wood wall
   components:
@@ -1177,7 +1184,7 @@
     fx: EffectRCDDeconstruct8 #Frontier
 
 - type: entity
-  parent: BaseWall
+  parent: NF_BaseWall
   id: WallWeb
   name: web wall
   description: Keeps the spiders in and the greytide out.
@@ -1228,7 +1235,7 @@
 # Lavalend Walls
 
 - type: entity
-  parent: BaseWall
+  parent: NF_BaseWall
   id: WallNecropolis
   name: stone wall
   components:
@@ -1252,7 +1259,7 @@
     base: necropolis
 
 - type: entity
-  parent: BaseWall
+  parent: NF_BaseWall
   id: WallMining
   name: mining wall
   components:
@@ -1308,7 +1315,7 @@
 # Vault Walls
 
 - type: entity
-  parent: BaseWall
+  parent: NF_BaseWall
   id: WallVaultAlien
   name: alien vault wall
   description: A mysterious ornate looking wall. There may be ancient dangers inside.
@@ -1407,7 +1414,7 @@
       state: forcewall
 
 - type: entity
-  parent: BaseWall
+  parent: NF_BaseWall
   id: WallCobblebrick
   name: cobblestone brick wall
   description: Stone by stone, perfectly fitted together to form a wall.
