--- a/Resources/Prototypes/Entities/Structures/Machines/base_structuremachines.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/base_structuremachines.yml
@@ -1,6 +1,6 @@
 - type: entity
   abstract: true
-  parent: BaseStructure
+  parent: [BaseStructure, NF_BaseSelfOxidizingFireFlammable]
   id: BaseMachine
   components:
   - type: InteractionOutline
