--- a/Resources/Prototypes/Entities/Structures/Storage/storage.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/storage.yml
@@ -1,5 +1,5 @@
 - type: entity
-  parent: BaseStructure
+  parent: [BaseStructure, NF_BaseSelfOxidizingFireFlammable]
   id: Rack
   name: rack
   description: A rack for storing things on.
