--- a/Resources/Prototypes/Entities/Structures/Walls/grille.yml
+++ b/Resources/Prototypes/Entities/Structures/Walls/grille.yml
@@ -1,6 +1,6 @@
 - type: entity
   id: Grille
-  parent: BaseStructure
+  parent: [BaseStructure, NF_BaseSelfOxidizingFireFlammable]
   name: grille
   description: A flimsy framework of iron rods.
   components:
